move theme script to app.html to avoid theme flickering

--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -34,6 +34,7 @@
 	--selection-color: var(--grey100);
 	--outline: var(--primary300);
 	--placeholder: var(--grey700);
+	--logotipo: var(--primary700);
 
 	/* accents */
 	--error: #d31b13;
@@ -75,12 +76,13 @@
 		--text: var(--grey200);
 		--light-text: var(--grey400);
 		--text-heading: var(--grey100);
-		--link: var(--primary300);
+		--link: var(--primary100);
 		--link-hover: var(--primary700);
 		--selection-bg: var(--primary300);
 		--selection-color: var(--grey100);
 		--outline: var(--primary300);
 		--placeholder: var(--grey100);
+		--logotipo: var(--primary300);
 
 		/* accents */
 		--error: #d31b13;
